# autorotation_opti_v2

./: CLAUDE.md  README.md  pyproject.toml  requirements-xfoil.txt  requirements.txt
.cache/optimize/: coarse_naca0408_283c894e1054696b.npz  coarse_naca0408_485e10499f0e5928.npz  coarse_naca0412_56581337365e1a28.npz  coarse_naca0412_83af2d652023ce9c.npz  coarse_naca0508_176cc0326e2d0258.npz  coarse_naca0508_a8ee90ceaced4b30.npz  coarse_naca0512_3c0e500963f879f0.npz  coarse_naca0512_acaeb4402ea5db14.npz  coarse_naca2408_0a672a58f4602cdc.npz  coarse_naca2408_5a6d9f5f43431c48.npz  coarse_naca2412_9c05fa19b332af55.npz  coarse_naca2412_c49b1c6140f6833b.npz  coarse_naca2508_07f860595258a410.npz  coarse_naca2508_1cae2af050855560.npz  coarse_naca2512_e8799dea33366ea4.npz  coarse_naca2512_f7a926e9bba3f3d7.npz  coarse_naca4408_b8f87b0f7bd5d3d5.npz  coarse_naca4408_bcb767b83fdc66b5.npz  coarse_naca4412_4078528afab54d00.npz  coarse_naca4412_d5aca77d8dbd96d8.npz  coarse_naca4508_35cf4406d83674bf.npz  coarse_naca4508_abb0847b24d32447.npz  coarse_naca4512_35c1a1b5d88b3bbf.npz  coarse_naca4512_8a25535a4ca7f4b4.npz  refine_naca0412_e57c2900cfc4b77e.npz  refine_naca2408_329d4209a957d27a.npz  refine_naca2408_811b337bfe7707bd.npz  refine_naca4408_6bde9b2c4639d1b1.npz  refine_naca4408_b168c585898022e1.npz  refine_naca4412_4d30377478c5884a.npz  refine_naca4512_26ef7ffb50580d58.npz
.cache/polars/: neuralfoil_naca0408_re12_a121.npz  (+11 more)
autorotation/: __init__.py  aero.py  models.py  optimize.py  optimizer.py  polars.py  reporting.py  rotor.py  simulate.py
data/: polar_naca.npz
(+1 files in other folders)
