[project]
name = "autorotation-opti-v2"
version = "0.1.0"
description = "Passive autorotating rotor design optimization for drop-time maximization."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

